--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="/" rel="tooltip" title="Engineering Test Kitchen" data-placement="bottom" >
-          Mythos AI
+          <b>Mythos AI</b>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -46,23 +46,23 @@
               Home </a>
           </li>
           <li class="dropdown nav-item">
-            <a href="/about" class="nav-link">
-              About Me
+            <a href="#about" class="nav-link">
+              About Us
             </a>
           </li>
-          <!-- <li class="dropdown nav-item">
-            <a href="/projects" class="nav-link">
-              Projects
-            </a>
-          </li> -->
           <li class="dropdown nav-item">
-            <a href="/contact" class="nav-link">
-              Contact
+            <a href="#mission" class="nav-link">
+              Mission
+            </a>
+          </li>
+          <li class="dropdown nav-item">
+            <a href="#team" class="nav-link">
+              Team
             </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-round btn-danger" href="/landing" >
-              Résumé
+            <a class="btn btn-round btn-danger" href="#contact" >
+              Contact Us
             </a>
           </li>
         </ul>
@@ -144,7 +144,7 @@
     </div>
   </div>
   
-  <div class="separator"></div><br/>
+  <div class="separator" id="mission"></div><br/>
     <div class="section section-dark section-summary" >
     <div class="container">
       <div class="text-center">
@@ -189,7 +189,7 @@
     <br/><br/><br/>
   </div>
 
-  <div class="team-4 section-image" style="background-image: url('./assets/img/sections/fabio-mangione.jpg')">
+  <div class="team-4 section-image" id="team" style="background-image: url('./assets/img/sections/fabio-mangione.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto text-center">
@@ -240,8 +240,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="separator"></div> -->
 
   <footer class="footer footer-black  footer-white ">
     <div class="container">
