--- a/index.html
+++ b/index.html
@@ -154,22 +154,11 @@
         <div class="col-md-4">
           <div class="info">
             <div class="icon icon-danger">
-              <i class="fa fa-university"></i>
+              <i class="fa fa-book"></i>
             </div>
             <div class="description">
-              <h4 class="info-title">Experience</h4>
-              <p>TODO</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="info">
-            <div class="icon icon-danger">
-              <i class="fa fa-briefcase"></i>
-            </div>
-            <div class="description">
-              <h4 class="info-title">Value</h4>
-              <p>TODO</p>
+              <h4 class="info-title">Immersive Story Telling</h4>
+              <p>We want to provide a highly customizable story telling engine, allowing users to be the authors of their own narratives, where the boundaries of creativity are limitless.</p>
             </div>
           </div>
         </div>
@@ -179,8 +168,19 @@
               <i class="fa fa-users"></i>
             </div>
             <div class="description">
-              <h4 class="info-title">Community</h4>
-              <p>TODO</p>
+              <h4 class="info-title">Generative Agents</h4>
+              <p>We are creating a flexible framework for leveraging generative agents in social simulations to leverage collective intelligence.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="info">
+            <div class="icon icon-danger">
+              <i class="fa fa-rocket"></i>
+            </div>
+            <div class="description">
+              <h4 class="info-title">Simulation Engine</h4>
+              <p>We are providing and end-to-end solution for running simulations where generative agents can operate in a constrained environment.</p>
             </div>
           </div>
         </div>
@@ -236,6 +236,27 @@
               </div>
             </div>
           </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="section section-icons" id="contact">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6 text-center">
+          <h2 class="title revealOnScroll">Contact Us
+            </h2>
+          <h5 class="description">
+              <b> Send us an email at jrfeibelman@gmail.com
+              </b>
+          </h5>
+          <br/>
+        </div>
         </div>
       </div>
     </div>
