--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
       </div>
     </div>
   </div>
+  <br/><br/>
 
   <div class="section section-icons" id="about">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
           <div class="icons-nucleo">
-            <i class="first-left-icon nc-icon nc-planet add-animation"></i>
+            <i class="first-left-icon nc-icon nc-istanbul add-animation"></i>
             <i class="second-left-icon nc-icon nc-touch-id add-animation"></i>
-            <i class="third-left-icon nc-icon nc-lock-circle-open add-animation"></i>
+            <i class="third-left-icon nc-icon nc-planet add-animation"></i>
             <i class="fourth-left-icon nc-icon nc-tap-01 add-animation"></i>
             <i class="fifth-left-icon nc-icon nc-zoom-split add-animation"></i>
             <i class="sixth-left-icon nc-icon nc-atom add-animation"></i>
@@ -128,13 +129,13 @@
         </div>
         <div class="col-md-3">
           <div class="icons-nucleo">
-            <i class="first-right-icon nc-icon nc-bank add-animation"></i>
-            <i class="second-right-icon nc-icon nc-tag-content add-animation"></i>
-            <i class="third-right-icon nc-icon nc-bell-55 add-animation"></i>
+            <i class="first-right-icon nc-icon nc-palette add-animation"></i>
+            <i class="second-right-icon nc-icon nc-controller-modern add-animation"></i>
+            <i class="third-right-icon nc-icon nc-send add-animation"></i>
             <i class="fourth-right-icon nc-icon nc-tv-2 add-animation"></i>
             <i class="fifth-right-icon nc-icon nc-map-big add-animation"></i>
             <i class="sixth-right-icon nc-icon nc-badge add-animation"></i>
-            <i class="seventh-right-icon nc-icon nc-simple-add add-animation"></i>
+            <i class="seventh-right-icon nc-icon nc-spaceship add-animation"></i>
             <i class="eighth-right-icon nc-icon nc-trophy add-animation"></i>
             <i class="ninth-right-icon nc-icon nc-hat-3 add-animation"></i>
             <i class="tenth-right-icon nc-icon nc-key-25 add-animation"></i>
@@ -199,7 +200,6 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <a href="/team#jason">
             <div class="card card-profile">
               <div class="card-body">
                 <div class="card-avatar">
@@ -216,10 +216,8 @@
                 <a href="https://www.linkedin.com/in/jasonfeibelman/" class="btn btn-just-icon btn-link btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
-          </a>
         </div>
         <div class="col-md-4">
-          <a href="/team#neil">
             <div class="card card-profile">
               <div class="card-body">
                 <div class="card-avatar">
@@ -235,7 +233,6 @@
                 <a href="https://www.linkedin.com/in/neilyeung/" class="btn btn-just-icon btn-link btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
-          </a>
         </div>
       </div>
     </div>
@@ -268,7 +265,7 @@
         <nav class="footer-nav">
           <ul>
             <li>
-              <a>Mythos</a>
+              <a>Mythos AI</a>
             </li>
           </ul>
         </nav>
