centered cards in team section

--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
   <div class="team-4 section-image" id="team" style="background-image: url('./assets/img/sections/fabio-mangione.jpg')">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 ml-auto mr-auto text-center">
-          <h2 class="title">Founders</h2>
-          <br />
+        <div class="col-md-8 mx-auto text-center">
+          <h2 class="title">Team</h2>
         </div>
       </div>
+      <!-- <br/> -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-5 mx-auto text-center">
           <a href="/team#jason">
             <div class="card card-profile">
               <div class="card-body">
@@ -208,8 +208,7 @@
                 <h4 class="card-title">Jason Feibelman</h4>
                 <h6 class="card-category">Cofounder</h6>
                 <p class="card-description text-center">
-                  Software Engineer at J.P. Morgan - worked on low latency trading algorithms<br><br>
-                  M.S. in Computer Science from Cornell Tech 
+                  Jason worked as a software engineer at J.P. Morgan on low latency trading algorithms. He is pursuing a Masters in Computer Science at Cornell.
                 </p>
               </div>
               <div class="card-footer text-center">
@@ -218,17 +217,17 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5 mx-auto text-center">
           <a href="/team#neil">
             <div class="card card-profile">
               <div class="card-body">
                 <div class="card-avatar">
-                  <img src="./assets/img/new_logo.png" alt="..." />
+                  <img src="./assets/img/neil.jpg" alt="..." />
                 </div>
                 <h4 class="card-title">Neil Yeung</h4>
                 <h6 class="card-category">Cofounder</h6>
                 <p class="card-description text-center">
-                  M.S. in Computer Science from Cornell Tech
+                  Neil worked as a machine learning engineer at Intel. He is pursuing a Masters in Computer Science at Cornell.
                 </p>
               </div>
               <div class="card-footer text-center">
