--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
       <!-- <br/> -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
             <div class="card card-profile">
               <div class="card-body">
                 <div class="card-avatar">
@@ -216,7 +216,7 @@
               </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
             <div class="card card-profile">
               <div class="card-body">
                 <div class="card-avatar">
