--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg fixed-top nav-down navbar-transparent" color-on-scroll="500">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="/" rel="tooltip" title="Engineering Test Kitchen" data-placement="bottom" >
+        <a class="navbar-brand" href="/" rel="tooltip" title="Mythos AI" data-placement="bottom" >
           <b>Mythos AI</b>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -248,7 +248,7 @@
           <h2 class="title revealOnScroll">Contact Us
             </h2>
           <h5 class="description">
-              <b> Send us an email at jrfeibelman@gmail.com
+              <b> Message us on LinkedIn: <a href="https://www.linkedin.com/in/jasonfeibelman/" class="btn btn-just-icon btn-link btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
               </b>
           </h5>
           <br/>
